--- a/style.css
+++ b/style.css
@@ -1,318 +1,333 @@
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .clearfix::after {
-   content: "";
-   display: block;
-   clear: both;
- }
+  content: "";
+  display: block;
+  clear: both;
+}
 
 /*Trzeba będzie wybrać wzór czcionki!*/
 body {
-   font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 header {
-   width: 100%;
-   height: 100vh;
-   position: relative;
-   overflow: hidden;
-   background-color: rgba(0,0,0,.9);
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
- header img {
-   position: absolute;
-   max-width: 100%;
-   min-height: 100%;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%,-50%); 
-   filter: brightness(65%);
-   transition: 2s inherit;
+header nav {
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  width: 100%;
+  height: 15vh;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: transparent;
+}
+
+header nav li {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0 80px;
+}
+
+header nav li ul {
+  float: left;
+  margin: 0 70px;
+}
+
+header img {
+  position: absolute;
+  max-width: 100%;
+  min-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: brightness(65%);
+  transition: 2s inherit;
 }
 
 .start {
-   position: absolute;
-   top: 35%;
-   left: 50%;
-   transform: translate(-5%,-50%); 
-   font-size: 200px;
-   text-align: center;
-   color: white;
-   letter-spacing: 8px;
-   transition: 2s inherit;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-5%, -50%);
+  font-size: 200px;
+  text-align: center;
+  color: white;
+  letter-spacing: 8px;
+  transition: 2s inherit;
 }
 
 .cursor {
-   font-weight: 200;
-   opacity: 0;
-   transition: .2s;
-  }
+  font-weight: 200;
+  opacity: 0;
+  transition: 0.2s;
+}
 .cursor.active {
-   opacity: 1;
-  }
-
-
+  opacity: 1;
+}
 
 /* ------------------- Strona główna -------------------- */
 
 /* ---- PORTRAIT---- */
 
 @media (orientation: portrait) and (min-width: 310px) {
-   .start {
-      top: 52%;
-      left: 50%;
-      font-size: 30px;
-      transform: translate(-50%, 50%);
-   }
-   .slider {
-      min-width: 100%;
-      min-height: 55%;
-      transform: translate(-50%, -46%);
-      top: 25%;
-   }
- }
- 
-@media (orientation: portrait) and (min-width: 360px) {
-   .start {
-      top: 55%;
-      left: 50%;
-      font-size: 35px;
-      transform: translate(-50%, 75%);
-   }
-   .slider {
-      min-width: 100%;
-      min-height: 55%;
-      transform: translate(-50%, -45%);
-      top: 25%;
-   }
- }
- 
-@media (orientation: portrait) and (min-width: 410px) {
-   .start {
-      top: 55%;
-      left: 50%;
-      font-size: 40px;
-      transform: translate(-50%, 80%);
-   }
-   .slider {
-      min-width: 100%;
-      min-height: 60%;
-      transform: translate(-50%, -45%);
-      top: 25%;
-   }
- }
- 
-@media (orientation: portrait) and (min-width: 768px) {  
-    .start {
-   top: 75%;
-   left: 50%;
-   font-size: 55px;
-   transform: translate(-50%, -50%);
-   }
-   .slider {
-   min-width: 100%;
-   min-height: 60%;
-   transform: translate(-50%, -42%);
-   top: 25%;
-}
+  .start {
+    top: 52%;
+    left: 50%;
+    font-size: 30px;
+    transform: translate(-50%, 50%);
+  }
+  .slider {
+    min-width: 100%;
+    min-height: 55%;
+    transform: translate(-50%, -46%);
+    top: 25%;
+  }
 }
 
-  
+@media (orientation: portrait) and (min-width: 360px) {
+  .start {
+    top: 55%;
+    left: 50%;
+    font-size: 35px;
+    transform: translate(-50%, 75%);
+  }
+  .slider {
+    min-width: 100%;
+    min-height: 55%;
+    transform: translate(-50%, -45%);
+    top: 25%;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 410px) {
+  .start {
+    top: 55%;
+    left: 50%;
+    font-size: 40px;
+    transform: translate(-50%, 80%);
+  }
+  .slider {
+    min-width: 100%;
+    min-height: 60%;
+    transform: translate(-50%, -45%);
+    top: 25%;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 768px) {
+  .start {
+    top: 75%;
+    left: 50%;
+    font-size: 55px;
+    transform: translate(-50%, -50%);
+  }
+  .slider {
+    min-width: 100%;
+    min-height: 60%;
+    transform: translate(-50%, -42%);
+    top: 25%;
+  }
+}
+
 /*  ---- LANDSCAPE ---- */
 
 @media (orientation: landscape) and (min-width: 420px) {
-    .start {
-   top: 45%;
-   left: 50%;
-   font-size: 28px;
-}
+  .start {
+    top: 45%;
+    left: 50%;
+    font-size: 28px;
+  }
 }
 
 @media (orientation: landscape) and (min-width: 640px) {
-   .start {
-      top: 35%;
-      left: 50%;
-      font-size: 35px;
-   }
+  .start {
+    top: 35%;
+    left: 50%;
+    font-size: 35px;
+  }
 }
- 
+
 @media (orientation: landscape) and (min-width: 720px) {
-   .start {
-      top: 35%;
-      left: 50%;
-      font-size: 55px;
-   }
+  .start {
+    top: 35%;
+    left: 50%;
+    font-size: 55px;
+  }
 }
 
 @media (orientation: landscape) and (min-width: 1024px) {
-   .start {
-      font-size: 75px;
-   }
+  .start {
+    font-size: 75px;
+  }
 }
- 
+
 @media (orientation: landscape) and (min-width: 1280px) {
-   .start {
-      font-size: 70px;
-   }
+  .start {
+    font-size: 70px;
+  }
 }
 
 @media (orientation: landscape) and (min-width: 1600px) {
-   .start {
-      font-size: 80px;
-   }
+  .start {
+    font-size: 80px;
+  }
 }
 
- /* ------------------------- O mnie  ---------------------------------*/
+/* ------------------------- O mnie  ---------------------------------*/
 .about-me {
- background-color: rgb(23, 42, 77);
- color: rgb(172, 173, 219);
- font-size: 25px;
- max-width: 1600px;
- min-height: 100vh;
- padding: 2% ;
- text-align: center;
+  background-color: rgb(23, 42, 77);
+  color: rgb(172, 173, 219);
+  font-size: 25px;
+  max-width: 1600px;
+  min-height: 100vh;
+  padding: 2%;
+  text-align: center;
 }
 
 .about-me h1 {
-   text-align: center;
-   padding: 10px 0 50px ;
-   letter-spacing: 10px;
-   font-size: 100px;
-   text-transform: uppercase;
+  text-align: center;
+  padding: 10px 0 50px;
+  letter-spacing: 10px;
+  font-size: 100px;
+  text-transform: uppercase;
 }
 
-.about-me h3{
-   text-align: center;
-   padding: 25px ;
-   letter-spacing: 10px;
-   font-size: 50px;
+.about-me h3 {
+  text-align: center;
+  padding: 25px;
+  letter-spacing: 10px;
+  font-size: 50px;
 }
 
-.about-me .name-test{
-   float: left;
+.about-me .name-test {
+  float: left;
 }
 
 .about-me p {
-   font-size: 40px;
-   font-weight: 300;
-   margin: 20px 0;
-   line-height: 50px;
+  font-size: 40px;
+  font-weight: 300;
+  margin: 20px 0;
+  line-height: 50px;
 }
 
 .about-me .texts {
-   position: relative;
-   top: 80px;
-   padding: 0 100px;
-   font-size: 27px;
-   line-height: 45px;
-   font-style: italic;
+  position: relative;
+  top: 80px;
+  padding: 0 100px;
+  font-size: 27px;
+  line-height: 45px;
+  font-style: italic;
 }
 
 .about-me .photo {
-   width: 100%;
-   height: 180px;
-   max-width: 180px;
-   border-radius: 50%;
-   margin: 5px 0; 
-   float: left;
-   position: relative;
-   left: 20%
+  width: 100%;
+  height: 180px;
+  max-width: 180px;
+  border-radius: 50%;
+  margin: 5px 0;
+  float: left;
+  position: relative;
+  left: 20%;
 }
 
 /*---------------------- CV ------------------ */
 
-
 .cv {
- background-color: rgb(172, 173, 219);
- min-height: 100vh;
+  background-color: rgb(172, 173, 219);
+  min-height: 100vh;
 }
 
 .edu {
-   padding: 50px;
-   font-size: 80px;
-   text-align: center;
-   font-weight: bold;
-   text-transform: uppercase;
+  padding: 50px;
+  font-size: 80px;
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
-.listedu{
-   list-style: none;
+.listedu {
+  list-style: none;
 }
 
 .now {
-   font-weight: normal;
-   margin: 50px;
-   padding: 5px;
-   border: 5px solid rgb(23, 42, 77);
-   border-radius: 50px;
-   font-size: 40px;
-   text-transform: none;
+  font-weight: normal;
+  margin: 50px;
+  padding: 5px;
+  border: 5px solid rgb(23, 42, 77);
+  border-radius: 50px;
+  font-size: 40px;
+  text-transform: none;
 }
 
 .now-time {
-   line-height: 12vh;
-   float: left;
-   padding-left: 10%;
-   font-weight: 700;
+  line-height: 12vh;
+  float: left;
+  padding-left: 10%;
+  font-weight: 700;
 }
 
 .now-time-text {
-   line-height: 12vh;
+  line-height: 12vh;
 }
 
-.now-time-opis{
- font-size: 25px;
- margin-left: 40%;
- border-radius: 50px;
- background-color: rgb(110, 111, 168);
-
+.now-time-opis {
+  font-size: 25px;
+  margin-left: 40%;
+  border-radius: 50px;
+  background-color: rgb(110, 111, 168);
 }
 
 .info {
-   font-size: 25px;
+  font-size: 25px;
 }
 .info .strony {
-   color: blue;
-   text-decoration-line: none;
+  color: blue;
+  text-decoration-line: none;
 }
-
 
 /* O jakieś przykłady */
 .hobby {
- background-color: rgb(231, 231, 241);
- min-height: 100vh;
- padding: 20px;
+  background-color: rgb(231, 231, 241);
+  min-height: 100vh;
+  padding: 20px;
 }
 
-.hobby .html{
-   width: 45%;
-   height: 50%;
+.hobby .html {
+  width: 45%;
+  height: 50%;
 }
-.hobby .css{
-   width: 45%;
-   height: 50%;
-}
-
-.hobby .js{
-   width: 45%;
-   height: 50%;
-
+.hobby .css {
+  width: 45%;
+  height: 50%;
 }
 
-
+.hobby .js {
+  width: 45%;
+  height: 50%;
+}
 
 /* Może jakaś mapka hmmm albo jakies pozostałe rzeczy */
 .other {
- background-color: rgb(157, 240, 140);
- height: 60vh;
- line-height: 30vh;
- font-size: 60px;
+  background-color: rgb(157, 240, 140);
+  height: 60vh;
+  line-height: 30vh;
+  font-size: 60px;
 }
-
 
 /*Stopka - jakieś kontakty(facebook, in, GitHub*/
 /* footer{
