--- a/style.css
+++ b/style.css
@@ -315,9 +315,9 @@ footer {
 }
 
 article {
-  color: whitesmoke;
   font-size: 20px;
   background-color: rgb(20, 19, 19);
   text-align: center;
   line-height: 50px;
+  color: red;
 }
